--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1> Heading </h1>
-        The HTML content goes here.
+        <img src="https://octodex.github.com/images/vinyltocat.png">
+
     </body>
 </html>
