--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
         <h1> Heading </h1>
         <img src="https://octodex.github.com/images/vinyltocat.png">
